@@ -6,6 +6,6 @@
 
   * Only one font will work per page at the moment. Fix this.
 
-  * Speed improvements for the manypages timetrial
-
   * Make the \n -> \r\n conversion into a function call and make it faster...
+
+  * Add see also sections in the man pages
