@@ -84,5 +84,14 @@ typedef struct __pdf{
 
   // This is a dummy object for dumping objects
   object           *dummyObj;
+
+  // Info dictionary information
+  char             *author;
+  char             *creationDate;
+  char             *modDate;
+  char             *creator;
+  char             *title;
+  char             *subject;
+  char             *keywords;
 } pdf;
 
